# guile-ini

./: .gitignore  ARCHITECTURE.org  AUTHORS  Makefile.am  NEWS  README.org  THANKS  configure.ac  guix.scm
.github/: FUNDING.yml
.github/workflows/: guile2.2.yml  guile3.0.yml  guix.yml
build-aux/am/: guile.am
doc/: .gitignore  Makefile.am  api-ini-fsm-context.texi  api-ini-fsm.texi  api-ini.texi  guile-ini.texi  indices.texi  installation.texi  intro.texi
examples/: .gitignore  Makefile.am  ini-to-scm.in
modules/: Makefile.am  ini.scm
modules/ini/: .gitignore  Makefile.am  fsm-context-ini.scm  fsm-context.scm  fsm-implementation.scm  fsm.puml  fsm.scm  fsm.scm.puml
tests/: Makefile.am  common.scm  fsm-context.scm  ini.scm
