## Makefile.am -- Config file for GNU Automake.
##
## Copyright (C) 2021 Artyom V. Poptsov <poptsov.artyom@gmail.com>
##
## This file is part of Guile-INI.
##
## Guile-INI is free software: you can redistribute it and/or
## modify it under the terms of the GNU General Public License as
## published by the Free Software Foundation, either version 3 of the
## License, or (at your option) any later version.
##
## Guile-INI is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with Guile-INI.  If not, see <http://www.gnu.org/licenses/>.

AUTOMAKE_OPTIONS = gnu

info_TEXINFOS = guile-ini.texi

guile_ini_TEXINFOS = \
	intro.texi		 \
	installation.texi	 \
	api-ini.texi		 \
	api-ini-fsm.texi	 \
	api-ini-fsm-context.texi \
	indices.texi		 \
	fdl.texi

## Makefile.am ends here
